--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="./scriptNew.js" defer></script>
   </head>
   <body>
-    <h1>Test</h1>
-    <script src="./script.js"></script>
+    <h1>Rock, Paper or Scissors?</h1>
+    <h2>chose wisely and win against the computer in a best of five</h2>
+    <div class="computer"></div></div>
+    <div class="arena">
+      <div class="text"></div>
+      <div class="counter"><p id="score"></p></div>
+    </div>
+    <div class="player">
+      <button class="rock"></button>
+      <button class="paper"></button>
+      <button class="scissors"></button>
+    </div>
   </body>
 </html>
