fix footer, remove console.log, adjust styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <h1>Rock, Paper or Scissors?</h1>
-      <h2>chose wisely and win against the computer in a best of five</h2>
+      <h2>choose wisely and win against the computer in a best of five</h2>
     </header>
     <div class="computer"></div>
     <div class="arena">
@@ -30,7 +30,7 @@
     <footer>
       Copyright &copy; 2022
       <a href="https://github.com/Raphiweb"
-        >Raphiweb <img src="images/githublogo.png" alt=""
+        >Raphiweb <img src="images/githublogo.png"
       /></a>
     </footer>
   </body>
