--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <h1>Rock, Paper or Scissors?</h1>
-      <h2>choose wisely and win against the computer in a best of five</h2>
+      <h2>choose wisely and win against <span>the computer</span></h2>
     </header>
     <div class="computer"></div>
     <div class="arena">
